# hollywood

./: .dockerignore  .env.example  .gitignore  .oxlintignore  .oxlintrc.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  _0094.avif  compose.yml  conftest.py  drizzle.config.ts  justfile  mise.toml  nexus.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.json  update_imports.py
.bruno/: get -candidates--id.yml  get -candidates.yml  get -doctor.yml  get -export.yml  get -projects--id.yml  get -projects.yml  get -search.yml  get -sources.yml  get -submissions.yml  get -tags.yml  opencollection.yml
.bruno/environments/: Local development.yml
.bruno/mutating/: delete -candidates--id.yml  delete -submissions--id.yml  folder.yml  patch -candidates--id.yml  patch -projects--id.yml  post -articles-enrich.yml  post -candidates.yml  post -ingest-group.yml  post -ingest-source.yml  post -ingest.yml  post -normalize.yml  post -projects.yml  post -submissions--id-candidate.yml
.claude/: launch.json
.github/workflows/: ml-lab-tests.yml  python-package.yml
Nexus API/: Health (GET).yml  opencollection.yml
Nexus API/audio/: Asr (POST).yml  Asr.yml  Health.yml  Tts.yml  folder.yml
Nexus API/experiments/: Delete Experiment.yml  Get Experiment.yml  Get Results.yml  List Experiments.yml  Submit Experiment.yml  folder.yml
Nexus API/runs/: Delete Run.yml  Get Run.yml  List Runs.yml  folder.yml
Nexus API/text/: Chat Completions (POST).yml  Chat Completions.yml  List Models.yml  Load Model.yml  Unload Model.yml  folder.yml
api/: drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/drizzle/: 0000_yummy_captain_america.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
api/src/: env.ts  index.ts  schema.ts
api/src/db/: helpers.ts  index.ts  schema.ts  test-utils.ts
api/src/ingest/: archive.ts  article-mentions-llm.test.ts  article-mentions-llm.ts  article-mentions.test.ts  article-mentions.ts  eml.ts  extraction.ts  extractors.ts  flows.ts  llm.ts  models.ts  registry.ts  storage.ts
api/src/resolvers/: candidates.ts  projects.ts  users.ts
assets/voice/: README.md
bruno/: README.md
bruno/hollywood-api/: get -candidates--id.yml  get -candidates.yml  get -doctor.yml  get -export.yml  get -projects--id.yml  get -projects.yml  get -search.yml  get -sources.yml  get -submissions.yml  get -tags.yml  get -users-me.yml  opencollection.yml
configs/benchmarks/: exp_01.yaml  exp_02.yaml  exp_03.yaml
configs/data/: alpaca.yaml  ultrafeedback.yaml
configs/models/: gemma3-1b.yaml  gemma3-4b.yaml  gemma4-e2b.yaml
configs/recipes/: dpo.yaml  grpo.yaml  orpo.yaml  sft_lora.yaml
docs/: api-taxonomy.md  domain-schema-v2.md  experiments-layer.md  ingestion-pipeline-architecture.md  naming-alignment.md  naming.md  next-steps.md  phase-1-benchmarks.md  phase-2-agentic-loop.md  phase-3-double-check-loop.md  platform-architecture.md  storage-model.md  storage-taxonomy.md  unified-schema.md
docs/schemas/: README.md  artifact.md  evaluation.md  experiment.md  job.md  run.md
docs/taxonomy/: README.md  artifact.md  benchmark.md  capability.md  evaluation.md  experiment.md  inference.md  job.md  model.md  nexus.md  run.md  training.md
drizzle/: 0000_flat_puppet_master.sql  0001_productive_hammerhead.sql  0002_even_star_brand.sql  0003_absurd_puma.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  _journal.json
experiments/: exp_01_baseline.py  exp_02_open_book.py  exp_03_reflection.py
experiments/configs/: exp_01.yaml  exp_02.yaml  exp_03.yaml
experiments/voice/: .gitignore  docker-compose.yml  justfile
infra/compose/: nexus-compose.yml  voice-compose.yml
migrations/: 00001_initial_schema.sql
research/benchmarks/: README.md
research/voice/: README.md
sandbox/: happy_path.py  insert-delete-getrandom.py  is_prime.py  linked_list.py  lstm_forecasting.py  multiplication_table.py  semaphores.py  spark.py  tower_of_hanoi.py  training_model.py
scripts/: README.md  __init__.py  analyze_inference_runs.py  migrate_kuma.py  run_inference_tests.sh
snakesss/cli/: __init__.py  nexus.py  people-from-trips.ipynb
src/: db.ts  env.ts  index.ts
src/cli/: main.py
src/domain/: migrate.ts  schema.ts  test-utils.ts
src/enrichment/: extractors.ts
src/hollywood/: __init__.py  archive.py  cli.py  config.py  crawler.py  extractors.py  flows.py  ingest_doc.py  models.py  registry.py  storage.py
src/ingestion/: archive.ts  flows.ts  models.ts
src/nexus/: __init__.py  config.py  device.py  env.py  main.py  runtime.py
src/routes/: article_enrichment.ts  candidates.ts  doctor.ts  errors.ts  export.ts  ingest.ts  ingest_source.ts  normalize.ts  projects.ts  search.ts  sources.ts  submissions.ts  tags.ts
src/scripts/: refresh-db.ts
src/services/: ArticleEnrichmentService.test.ts  ArticleEnrichmentService.ts  CandidateService.test.ts  CandidateService.ts  ExportService.ts  IngestService.test.ts  IngestService.ts  ProjectService.test.ts  ProjectService.ts  SearchService.test.ts  SearchService.ts  SubmissionService.test.ts  SubmissionService.ts
test_outputs/: 01_chat_message.txt  02_user_story_generate.txt  03_tools_writer.txt  04_vision_describe.txt  05_chat_stream.txt  06_chat_stream_fixed.txt  chat_message.txt
tests/: conftest.py  test_adapters.py  test_api.py  test_api_routes.py  test_audio.py  test_cli.py  test_config.py  test_data.py  test_device.py  test_env.py  test_evals.py  test_evaluations_store.py  test_experiment_cache.py  test_experiments_store.py  test_hollywood.py  test_integration.py  test_metrics.py  test_model_policy.py  test_openapi.py  test_phase_runners.py  test_reference_cache.py  test_registry_and_settings.py  test_rss_and_wga.py  test_runs.py  test_runtime.py  test_schemas.py  test_storage_and_flows.py  test_tool_calls.py  test_trainers_imports.py  test_voice.py
tests/fixtures/: article.html  wga_profile.txt
tests/tests/: test_utils.py
(+312 files in other folders)
