[project]
name = "nexus"
version = "0.1.0"
description = "OpenRouter-first multimodal API adapter and eval layer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Charles Ponti" }]
keywords = [
    "fastapi",
    "llm",
    "openrouter",
    "ai",
    "multimodal",
    "api",
    "async",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "google-auth>=2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "rich>=13.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/ponti-studios/nexus"
Repository = "https://github.com/ponti-studios/nexus"
"Bug Tracker" = "https://github.com/ponti-studios/nexus/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "standard"
