[project]
name = "hollywood"
version = "0.1.0"
description = "WGA directory crawl CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Charles Ponti" }]
keywords = [
    "playwright",
    "crawler",
    "cli",
    "jsonl",
    "wga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.54.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/ponti-studios/hollywood"
Repository = "https://github.com/ponti-studios/hollywood"
"Bug Tracker" = "https://github.com/ponti-studios/hollywood/issues"

[project.scripts]
hollywood = "hollywood.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hollywood"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "standard"
