[project]
name = "hollywood"
version = "0.1.0"
description = "Hollywood data collection CLI for feeds, datasets, and directories"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Charles Ponti" }]
keywords = [
    "playwright",
    "crawler",
    "cli",
    "jsonl",
    "wga",
    "rss",
    "duckdb",
    "prefect",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "playwright>=1.54.0",
    "prefect>=3.4.7",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "rich>=13.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.1.0",
    "trafilatura>=2.0.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/ponti-studios/hollywood"
Repository = "https://github.com/ponti-studios/hollywood"
"Bug Tracker" = "https://github.com/ponti-studios/hollywood/issues"

[project.scripts]
hollywood = "hollywood.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hollywood"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
